--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 <% items.forEach(item => { %>
 <a href="./detail/<%= item.id %>" class="title-items"><%= item.title %></a>
 <% if (item.afbeelding) { %>
-<img src="https://fdnd-agency.directus.app/assets/<%= item.afbeelding %>" class="items"  alt="items-afbeeldingen"
+<img src="https://fdnd-agency.directus.app/assets/<%= item.afbeelding %>" class="items"  alt="items-afbeeldingen">
 <% } %>
 <% }) %>
 
