--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -25,26 +25,9 @@
 
 <% }) %> 
 
-<!-- 
 
-    <h2>Berichten</h2>
-      <ul>
-         <% reviews.forEach(review => { %> 
-            <article>
-        <li><%= review %></li> <% }) %>
-     </ul>
-  
-<form method="POST" action="/detail">
-    <label> Typ hier je bericht   
-       <textarea required name="review">
-         </textarea>
-        </label>
-    <button type="submit" >verstuurd</button>
-</form>
-  
-</article>
 
- popup dialog-->
+ <!-- popup dialog -->
 
 </main>
 
