--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,27 +3,35 @@
 
 <main>
 
+<!-- 
+    <div class="zoek-balk">
+        <div class="zoek-balk-menu">
+                <i class='bx bx-search icon'></i>
+                <input type="tekst" placeholder="Zoek...">
+        </div> -->
+<!-- 
+    <img src="/assets/oba_20.png" class="oba-logo" alt="oba-logo"> -->
 
- <h1> Welcome</h1>
 
-
+ <h1> Welkom Akiko Schermer bij OBA!</h1>
+    
 <% profiles.forEach(profile => { %>
          <article class="profiles">
-             <% profiles.forEach(profile => { %>
                 <h2><a href="./index/<%= profile.id %>" class="profile-text"><%= profile.name %></a></h2>
 
-                <% if (profile.avatar) { %>
+            <% if (profile.avatar) { %>
               <img src="https://fdnd-agency.directus.app/assets/<%= profile.avatar %>" class="profile-avatars" alt="">
             <% } %>
         </article>
 <% }) %>
     
+
 <!-- <section class="overview"><h1><a href="/overview"> Back</a></h1></section> -->
 
-<!-- <section class="home">
-    <div class="text"><img src="/assets/oba_20.png" alt=""></div>
+<!-- <section class="home"> -->
+
     
-</section> -->
+<!-- </section> -->
 
 </main>
 
