--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -41,12 +41,12 @@
   </header>
 
 
-  <div class="menu-bar">
+ <!-- <div class="menu-bar">
       <div class="menu">
           <li class="search-box">
               <i class='bx bx-search icon'></i>
               <input type="text" placeholder="Zoek...">
-          </li>
+          </li> -->
 
 
           <ul class="menu-links">
