--- a/public/style.css
+++ b/public/style.css
@@ -68,6 +68,8 @@ main {
 
 body {
     background-color: var(--body-color);
+    font-family: 'avenirroman';
+    
 }
 
 ::selection {
@@ -87,7 +89,8 @@ section {
     z-index: 2;
 }
 
-article {
+
+article  {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -97,15 +100,6 @@ article {
 
 /* profiles */
 
-article .profiles {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 4em;
-    margin-left: 5em;
-}
-
 .profile-avatars {
     width: 80%;
     height: 150px;
@@ -113,16 +107,30 @@ article .profiles {
     border-radius: 10px;
 }
 
+.profile-name {
+    font-size: 1.5em;
+    text-decoration: none;
+    margin-right: 1em;
+    margin-bottom: 2.5em;
+}
+
+.profile-name a{
+    text-decoration: none;
+    color: black;
+}
+
 
 h1 {
     text-align: left;
-    margin-left: 3.3em;
-    margin-top: 0.5em;
+    margin-left: 3.5em;
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
 
-h2 {
+
+ h2 {
   text-align: left;
-  margin-left: 4.5em;
+  margin-left: 1.5em;
   font-size: 2em;
 }
 
@@ -130,19 +138,25 @@ h2  {
     margin-top: 3em;
     margin: 1em;
     text-align: center;
+}  
+
+h2 a {
+    text-decoration: none;
+    color: black;
 }
 
 h3  {
     padding-top: 1em;
-    text-align: center;
     font-size: 2em;
-    padding-left: 1.1em;
-    margin-left: 2.5em;
+    padding-left:3.5em;
+    margin-top: 1em;
+    margin-bottom: 0.5em;
 }
+
 
 p {
     text-align: center;
-    margin-left: 2.5em;
+    margin-left: 5em;
 }
 
 article p {
@@ -150,32 +164,94 @@ article p {
     margin-left:-1em;
 }
 
-/* .oba-logo { */
-    /* margin-left: 14.8em; */
-    /* margin-top: -2em; */
-/* } */
+.oba-logo { 
+    position: absolute;
+    left: 110px;
+    margin-top: 1em;  
+    margin-bottom: 3em; 
+    width: 3.5em;
+}
+   /* margin-left: 7em; 
+   /* margin-left: 14em;
+   /* margin-top: 1em;  
+   margin-bottom: 3em; 
+   width: 3.5em; */
+
 
 .zoek-balk {
     padding: 20px;
 }
 
 .zoek-balk-menu {
-    margin-left: 6.5em;
+    position: absolute;
+    right: 8px;
+    background-color: var(--sidebar-color);
+    color: var(--text-color);
+    border-radius: 6px;
+    font-size: 1em;
+    display: flex;
+    flex-direction: row;
+    padding: 7px;
+    width: 100px;
+}
+
+.zoek-balk input {
+    height: 14px;
+    width: 60px;
+    outline: none;
+    border: none;
+    background-color: var(--sidebar-color);
+    color: var(--text-color);
+    border-radius: 6px;
+    font-size: 1em;
+    font-weight: 500;
+    transition: var(--tran-05);
+    padding-left: 10px;
 }
 
 
 /* items */
 
+
+/* main .scroll-container {
+  
+} */
+
+/* article.alle-items {
+    background-color: white;
+    overflow: auto;
+    white-space: nowrap;
+    padding: 10px;
+}
+
+.scroll-items {
+
+    background-color: white;
+    overflow: auto;
+    white-space: nowrap;
+    padding: 10px;
+} */
+
+/* .scroll-items img {
+    padding: 10px;
+}  */
+
+
+.item-titels {
+    /* margin-right: 2em; */
+    margin-bottom: 2.5em;
+
+}
+
 .items {
-    width: 60%;
+    width: 65%;
     object-fit: cover;
     border-radius: 10px;
     margin: 1em;
+    margin-left: 1em;
 }
 
 .title-items {
-    margin: 1em;
-    margin-left: 2em;
     text-align: left;
     text-decoration: none;
     color: black;
@@ -183,12 +259,14 @@ article p {
 
 a .title-items {
     margin-top: 3em;
-    margin-left: 2em;
+    margin-left: 2.5em;
     margin: 1em;
     text-decoration: none;
     text-align: left;
     color: black;
 }
+
+
 
 /* --- detail item --- */
 
@@ -199,12 +277,53 @@ a .title-items {
     margin: 1em;
 }
 
+a .item-titel {
+    text-decoration: none;
+}
+
 .item-title  {
     text-align: left;
     text-decoration: none;
     color: black;
+    margin-top: 2.5em;
+    font-size: 1em;
 }
 
+button {
+    padding: .3em .6em;
+    border: 1px solid transparent;
+    border-radius: .5rem;
+    font-family: inherit;
+    font-size: inherit;
+    text-decoration: none;
+    color: black;
+    background: var(--sidebar-color);
+    cursor: pointer;
+    margin-left: 0.5em; 
+    margin:0.5em;
+}
+
+.stars {
+    /* display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    direction: rtl; */
+}
+
+.stars input {
+    display: none;
+}
+
+.stars label:before {
+    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path fill="%2366E5BF" d="M32 12.408l-11.056-1.607-4.944-10.018-4.944 10.018-11.056 1.607 8 7.798-1.889 11.011 9.889-5.199 9.889 5.199-1.889-11.011 8-7.798zM16 23.547l-6.983 3.671 1.334-7.776-5.65-5.507 7.808-1.134 3.492-7.075 3.492 7.075 7.807 1.134-5.65 5.507 1.334 7.776-6.983-3.671z"></path></svg>');
+}
+
+.stars input:checked ~ label {
+    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path fill="%2366E5BF" d="M32 12.408l-11.056-1.607-4.944-10.018-4.944 10.018-11.056 1.607 8 7.798-1.889 11.011 9.889-5.199 9.889 5.199-1.889-11.011 8-7.798z"></path></svg>');
+}
+
+.stars input:not(:checked) ~ label:hover {
+    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path fill="%2366E5BF" d="M32 12.408l-11.056-1.607-4.944-10.018-4.944 10.018-11.056 1.607 8 7.798-1.889 11.011 9.889-5.199 9.889 5.199-1.889-11.011 8-7.798z"></path></svg>');
+}
 
 /* --- like button --- */
 
@@ -230,22 +349,18 @@ a .title-items {
     width: 88px;
 }
 
-/* ===== Reusable code - Here ===== */
-
 .sidebar li {
     height: 50px;
-    list-style: none;
+    /* list-style: none; */
     display: flex;
     align-items: center;
     margin-top: 10px;
 }
 
-
 .sidebar header .image,.sidebar .icon{
     min-width: 60px;
     border-radius: 6px;
 }
-
 
 .sidebar .icon{
     min-width: 60px;
@@ -274,6 +389,7 @@ a .title-items {
         opacity: 0;
 }
     
+
 .sidebar .text-long, .sidebar .icon{
         color: var(--text-color);
         transition: var(--tran-03);
@@ -300,7 +416,9 @@ img {
 }
 
 
-.sidebar header{
+/* --- sidebar header ---- */
+
+.sidebar header {
         position: relative;
  }
     
@@ -366,6 +484,8 @@ body.dark .sidebar header .toggle{
         color: var(--text-color);
 }
     
+
+/* ---- */
     
 .sidebar.close .toggle {
         transform: translateY(-50%) rotate(0deg);
@@ -405,7 +525,7 @@ body.dark .sidebar header .toggle{
         display: flex;
         align-items: center;
         height: 100%;
-        /* width: 100%; */
+        width: 100%;
         border-radius: 6px;
         text-decoration: none;
         transition: var(--tran-03);
@@ -447,12 +567,12 @@ body.dark .sidebar li a:hover .text{
 }
     
 .menu-bar .mode .sun-moon {
-        height: 50px;
-        width: 60px;
+    height: 50px;
+    width: 60px;
 }
     
 .mode .sun-moon i {
-        position: absolute;
+    position: absolute;
 }
 
 .mode .sun-moon i.sun {
@@ -533,4 +653,15 @@ body.dark .switch::before {
 
 body.dark .home .text {
     color: var(--text-color);
+}
+
+
+/* mediaqueries */
+
+
+@media (min-width:375px) {
+
+  
+  
+
 }
