--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -40,14 +40,12 @@
       <i class='bx bx-chevron-right toggle'></i>
   </header>
 
-
- <!-- <div class="menu-bar">
+<!-- <div class="menu-bar">
       <div class="menu">
           <li class="search-box">
               <i class='bx bx-search icon'></i>
               <input type="text" placeholder="Zoek...">
-          </li> -->
-
+          </li>  -->
 
           <ul class="menu-links">
               <li class="nav-link">
@@ -59,7 +57,7 @@
 
 
               <li class="nav-link">
-                  <a href="#">
+                  <a href="">
                       <i class='bx bx-list-ul icon'></i>
                       <span class="text nav-text">Leeslijst</span>
                   </a>
