--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -131,9 +131,9 @@
               <span class="mode-text text">Dark mode</span>
 
 
-              <div class="toggle-switch">
+              <!-- <div class="toggle-switch">
                   <span class="switch"></span>
-              </div>
+              </div> -->
           </li>
           
       </div>
