--- a/public/style.css
+++ b/public/style.css
@@ -41,8 +41,7 @@
     --primary-color-light: #F6F5FF;
     --toggle-color: #DDD;
     --text-color: #707070;
-
-
+    
     /* ====== Transition ====== */
     --tran-03: all 0.2s ease;
     --tran-03: all 0.3s ease;
@@ -171,12 +170,7 @@ article p {
     margin-bottom: 3em; 
     width: 3.5em;
 }
-   /* margin-left: 7em; 
-   /* margin-left: 14em;
-   /* margin-top: 1em;  
-   margin-bottom: 3em; 
-   width: 3.5em; */
-
+ 
 
 .zoek-balk {
     padding: 20px;
@@ -289,6 +283,7 @@ a .item-titel {
     font-size: 1em;
 }
 
+
 button {
     padding: .3em .6em;
     border: 1px solid transparent;
@@ -300,30 +295,9 @@ button {
     background: var(--sidebar-color);
     cursor: pointer;
     margin-left: 0.5em; 
-    margin:0.5em;
+    margin:em;
 }
 
-.stars {
-    /* display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    direction: rtl; */
-}
-
-.stars input {
-    display: none;
-}
-
-.stars label:before {
-    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path fill="%2366E5BF" d="M32 12.408l-11.056-1.607-4.944-10.018-4.944 10.018-11.056 1.607 8 7.798-1.889 11.011 9.889-5.199 9.889 5.199-1.889-11.011 8-7.798zM16 23.547l-6.983 3.671 1.334-7.776-5.65-5.507 7.808-1.134 3.492-7.075 3.492 7.075 7.807 1.134-5.65 5.507 1.334 7.776-6.983-3.671z"></path></svg>');
-}
-
-.stars input:checked ~ label {
-    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path fill="%2366E5BF" d="M32 12.408l-11.056-1.607-4.944-10.018-4.944 10.018-11.056 1.607 8 7.798-1.889 11.011 9.889-5.199 9.889 5.199-1.889-11.011 8-7.798z"></path></svg>');
-}
-
-.stars input:not(:checked) ~ label:hover {
-    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path fill="%2366E5BF" d="M32 12.408l-11.056-1.607-4.944-10.018-4.944 10.018-11.056 1.607 8 7.798-1.889 11.011 9.889-5.199 9.889 5.199-1.889-11.011 8-7.798z"></path></svg>');
-}
 
 /* --- like button --- */
 
@@ -331,9 +305,11 @@ button {
     border: none;
 }
 
+
+
 /* ===== Sidebar ===== */
 
- .sidebar {
+.sidebar {
     position: fixed;
     top: 0;
     left: 0;
