--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,14 @@
 <%- include('./partials/head') %>
 
-<main class="scroll-container">
+<main>
 
 <img src="/assets/oba_20.png" class="oba-logo" alt="oba-logo">
     
-  <div class="zoek-balk">
-      <div class="zoek-balk-menu">
-          <i class='bx bx-search icon'></i>
-            <input type="text" placeholder="">
-          </div>  
+<div class="zoek-balk">
+     <div class="zoek-balk-menu">
+        <i class='bx bx-search icon'></i>
+     <input type="text" placeholder="">
+</div>  
 
 
 <h3> Favorieten</h3>
@@ -16,13 +16,12 @@
 
 <% items.forEach(item => { %>
    <article class="alle-items"> 
-       <a href="./detail/<%= item.id %>" class="title-items">
+      <a href="./detail/<%= item.id %>" class="title-items">
           <% if (item.afbeelding) { %> 
-           <img src="https://fdnd-agency.directus.app/assets/<%= item.afbeelding %>" class="items"  alt="">
+            <img src="https://fdnd-agency.directus.app/assets/<%= item.afbeelding %>" class="items"  alt="">
           <div class="item-titels"><%= item.title %></div></a><% } %>
     </article>
 <% }) %>
-
 
 
 </main>
