--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,7 @@
 
 <h3> Favorieten</h3>
 
+<article>
 
 <% items.forEach(item => { %>
    <article class="alle-items"> 
@@ -23,6 +24,8 @@
     </article>
 <% }) %>
 
+
+</article>
 
 </main>
 
